syntax = "proto2";

option cc_enable_arenas = true;

package c2017.webdash;

message WebDash {
  enum Auto {
    NONE = 0;
    ONE_GEAR = 1;
    TWO_GEAR = 2;
    HELLA_KPA = 3;
    HELLA_KPA_PLUS_GEAR = 4;
  }
  required uint64 timestamp = 1;
  required Auto auto_mode = 2;
}
